# appli-resto

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PLANS.md  PROMPT_INITIAL_CODEX.md  README.md  README_START_HERE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: phase.yml
PROJECTS/pilotage-restaurants/: project-state.md
apps/api/: pyproject.toml
apps/api/src/pilotage_api/: __init__.py  demo.py  forecasts.py  health.py  main.py  settings.py
apps/api/src/pilotage_api/forecasting/: __init__.py  backtest.py  engine.py  models.py  repository.py
apps/api/src/pilotage_api/recommendations/: __init__.py  engine.py  models.py  routes.py
apps/api/src/pilotage_api/simulation/: __init__.py  adapters.py  config.py  generator.py  models.py  randomness.py  scenarios.py  storage.py
apps/api/tests/: test_demo_api.py  test_forecasting.py  test_health.py  test_recommendations.py  test_simulation.py
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
data/: README.md
data/config/: scenarios.json  sites.json
docs/: 00_PRODUCT_BRIEF.md  01_PROTOTYPE_SCOPE.md  02_DATA_SIMULATION.md  03_API_CONTRACTS.md  04_FORECASTING_AND_RULES.md  05_UX_SCREENS.md  06_ACCEPTANCE_TESTS.md  07_FORECASTING_IMPLEMENTATION.md  08_RECOMMENDATIONS_IMPLEMENTATION.md  09_UX_IMPLEMENTATION.md  10_INTEGRATION_DEMO.md  11_FINAL_REVIEW.md  12_PUBLIC_DEPLOYMENT.md  EXECUTION_PLAN.md
references/: ETUDE_COMPLETE.md
scripts/: build_revised_study.py
(+26 files in other folders)
